objects/PPCommonRequestParameters__c.object
<CustomObject>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <description>Your Application&apos;s Identification, such as the name of your application.</description>
        <inlineHelpText>Your Application&apos;s Identification, such as the name of your application.</inlineHelpText>
        <label>ApplicationName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <description>The currency code</description>
        <inlineHelpText>The currency code</inlineHelpText>
        <label>CurrencyCode</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DetailLevel__c</fullName>
        <description>The level of detail required by the client application for component such as Item, Transaction.</description>
        <inlineHelpText>The level of detail required by the client application for component such as Item, Transaction.</inlineHelpText>
        <label>DetailLevel</label>
        <picklist>
            <picklistValues>
                <fullName>ReturnAll</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FeePayer__c</fullName>
        <description>The payer of PayPal fees</description>
        <inlineHelpText>The payer of PayPal fees</inlineHelpText>
        <label>FeePayer</label>
        <picklist>
            <picklistValues>
                <fullName>SENDER</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PRIMARYRECEIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EACHRECEIVER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECONDARYONLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PayPal Common Request Parameters</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PPCommonRequestParameters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PayPal Common Request Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>